enterprise/resources/openapi-mcp/petstore-code-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-openapi-mcp
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agentgateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /code-openapi-mcp/mcp
      backendRefs:
      - name: petstore-code-mcp
        group: enterpriseagentgateway.solo.io
        kind: EnterpriseAgentgatewayBackend
